--- a/about.html
+++ b/about.html
@@ -5,13 +5,18 @@
   <title>About</title>
   <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
   <header>
     <div class="row">
       <h1>About</h1>
       <nav class="main-nav">
         <ul>
-          <li><a class="nav-button" href="index.html">Home</a></li>
+          <li><a class="border-button" href="index.html">Home</a></li>
+          <li><a class="border-button" href="about.html">About</a></li>
+          <li><a class="border-button" href="#">Page</a></li>
+          <li><a class="border-button" href="#">Page</a></li>
+          <li><a class="border-button" href="#">Page</a></li>
         </ul>
       </nav>
     </div>
