--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       <h1>Hello world</h1>
       <nav class="main-nav">
         <ul>
-          <li><a class="nav-button" href="about.html">About</a></li>
-          <li><a class="nav-button" href="#">Page</a></li>
-          <li><a class="nav-button" href="#">Page</a></li>
-          <li><a class="nav-button" href="#">Page</a></li>
-          <li><a class="nav-button" href="#">Page</a></li>
+          <li><a class="border-button" href="about.html">Home</a></li>
+          <li><a class="border-button" href="about.html">About</a></li>
+          <li><a class="border-button" href="#">Page</a></li>
+          <li><a class="border-button" href="#">Page</a></li>
+          <li><a class="border-button" href="#">Page</a></li>
         </ul>
       </nav>
     </div>
