--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-
   <header>
     <div class="row">
       <h1>Hello world</h1>
@@ -32,6 +31,7 @@
         <p>World2 is here</p>
       </div>
     </section>
+    
     <section id="players">
       <h1>players</h1>
       <ol class="player-list">
@@ -39,8 +39,13 @@
         <li>Frank</li>
         <li>Mike</li>
       </ol>
-    </section>    
-  </main>
 
+      <div class="register">
+        <h2>join the others</h2>
+        <a href="hallo">Register</a>
+      </div>
+    </section>
+    
+  </main>
 </body>
 </html>
